@@ -1075,7 +1075,7 @@ SEXP attribute_hidden do_for(SEXP call, SEXP op, SEXP args, SEXP rho)
 	   least 1.  LT */
     nm = NAMED(val);
 
-    PROTECT_WITH_INDEX(ans, &api);
+    PROTECT_WITH_INDEX(ans, &api);  /**** ans should no longer be needed. LT */
     begincontext(&cntxt, CTXT_LOOP, R_NilValue, rho, R_BaseEnv, R_NilValue,
 		 R_NilValue);
     switch (SETJMP(cntxt.cjmpbuf)) {
@@ -1138,7 +1138,7 @@ SEXP attribute_hidden do_for(SEXP call, SEXP op, SEXP args, SEXP rho)
     endcontext(&cntxt);
     UNPROTECT(5);
     SET_DEBUG(rho, dbg);
-    return ans;
+    return R_NilValue;
 }
 
 
@@ -1146,9 +1146,8 @@ SEXP attribute_hidden do_while(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     int dbg;
     volatile int bgn;
-    volatile SEXP t, body;
+    volatile SEXP body;
     RCNTXT cntxt;
-    PROTECT_INDEX tpi;
 
     checkArity(op, args);
 
@@ -1156,20 +1155,17 @@ SEXP attribute_hidden do_while(SEXP call, SEXP op, SEXP args, SEXP rho)
     body = CADR(args);
     bgn = BodyHasBraces(body);
 
-    t = R_NilValue;
-    PROTECT_WITH_INDEX(t, &tpi);
     begincontext(&cntxt, CTXT_LOOP, R_NilValue, rho, R_BaseEnv, R_NilValue,
 		 R_NilValue);
     if (SETJMP(cntxt.cjmpbuf) != CTXT_BREAK) {
 	while (asLogicalNoNA(eval(CAR(args), rho), call)) {
 	    DO_LOOP_DEBUG(call, op, args, rho, bgn);
-	    REPROTECT(t = eval(body, rho), tpi);
+	    eval(body, rho);
 	}
     }
     endcontext(&cntxt);
-    UNPROTECT(1);
     SET_DEBUG(rho, dbg);
-    return t;
+    return R_NilValue;
 }
 
 
@@ -1177,9 +1173,8 @@ SEXP attribute_hidden do_repeat(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     int dbg;
     volatile int bgn;
-    volatile SEXP t, body;
+    volatile SEXP body;
     RCNTXT cntxt;
-    PROTECT_INDEX tpi;
 
     checkArity(op, args);
 
@@ -1187,20 +1182,17 @@ SEXP attribute_hidden do_repeat(SEXP call, SEXP op, SEXP args, SEXP rho)
     body = CAR(args);
     bgn = BodyHasBraces(body);
 
-    t = R_NilValue;
-    PROTECT_WITH_INDEX(t, &tpi);
     begincontext(&cntxt, CTXT_LOOP, R_NilValue, rho, R_BaseEnv, R_NilValue,
 		 R_NilValue);
     if (SETJMP(cntxt.cjmpbuf) != CTXT_BREAK) {
 	for (;;) {
 	    DO_LOOP_DEBUG(call, op, args, rho, bgn);
-	    REPROTECT(t = eval(body, rho), tpi);
+	    eval(body, rho);
 	}
     }
     endcontext(&cntxt);
-    UNPROTECT(1);
     SET_DEBUG(rho, dbg);
-    return t;
+    return R_NilValue;
 }
 
 
@@ -3124,7 +3116,7 @@ static SEXP bcEval(SEXP body, SEXP rho)
 	R_BCNodeStackTop[-1] = value;
 	NEXT();
       }
-    OP(SETLOOPVAL, 0): value = BCNPOP(); R_BCNodeStackTop[-1] = value; NEXT();
+    OP(SETLOOPVAL, 0): BCNPOP(); R_BCNodeStackTop[-1] = R_NilValue; NEXT();
     OP(INVISIBLE,0): R_Visible = FALSE; NEXT();
     OP(LDCONST, 1): DO_LDCONST(value); BCNPUSH(value); NEXT();
     OP(LDNULL, 0):  BCNPUSH(R_NilValue); NEXT();
